background FIXED on small screens/mobile

--- a/Taichi del Encuentro/stylez2test.css
+++ b/Taichi del Encuentro/stylez2test.css
@@ -1,9 +1,9 @@
 ﻿body {
-   overflow-x:hidden;
+    overflow-x: hidden;
 }
 
 html {
-    overflow-x:hidden;
+    overflow-x: hidden;
 }
 
 .verso-taoista {
@@ -134,13 +134,21 @@ html {
 @media only screen and (max-width: 767px) {
     .megabg {
         /*background-color:#f6eebf*/
-        background: url(bamboo-crop-xs.jpg) no-repeat center center fixed; 
+        background: url(bamboo-crop-xs.jpg) no-repeat center center fixed;
+        width: 100%;
+        height: 100%;
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: 0;
+        /* background-attachment: fixed; removed for Android */
         -webkit-background-size: cover;
         -moz-background-size: cover;
         -o-background-size: cover;
         background-size: cover;
+        overflow: scroll;
+        -webkit-overflow-scrolling: touch;
     }
-
 }
 
 @media (min-width: 768px) {
